[gd_scene load_steps=17 format=2]

[ext_resource path="res://05_Totalizzatore/Totalizzatore.png" type="Texture" id=1]
[ext_resource path="res://00_Font_ROTARY/Inconstant-Base100.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Totalizzatore/TovagliaSlice.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Totalizzatore/PostoTavola.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Totalizzatore/PostoTavolaSopra.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Totalizzatore/Totalizzatore.gd" type="Script" id=6]
[ext_resource path="res://Scenes/UI_elements/UIButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://SOund/eating.mp3" type="AudioStream" id=8]
[ext_resource path="res://SOund/chime_cut.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 204
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EatingSound:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -50.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "sound_up"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("EatingSound:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -50.0, -15.0 ]
}

[node name="Totalizzatore" type="Control"]
rect_min_size = Vector2( 1920, 1200 )
script = ExtResource( 6 )
posto_sopra = ExtResource( 5 )
posto_sotto = ExtResource( 4 )
tovaglia_slice = ExtResource( 3 )

[node name="Tavola" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1487.0
size_flags_horizontal = 2

[node name="TovagliaContainer" type="HBoxContainer" parent="Tavola"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_right = -415.0
custom_constants/separation = -1

[node name="PostiTavolaSotto" type="HBoxContainer" parent="Tavola"]
anchor_bottom = 1.0
margin_left = 30.0
margin_right = 1505.0
custom_constants/separation = 200

[node name="PostiTavolaSopra" type="HBoxContainer" parent="Tavola"]
anchor_bottom = 1.0
margin_left = 529.0
margin_right = 1532.0
custom_constants/separation = 200

[node name="Totalizzatore_UI" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Punteggio" type="Label" parent="Totalizzatore_UI"]
margin_left = 29.0
margin_top = 157.0
margin_right = 313.0
margin_bottom = 372.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "12"
align = 1
valign = 1

[node name="PunteggioAggiuntivo" type="Label" parent="Totalizzatore_UI"]
margin_left = 318.0
margin_top = 152.0
margin_right = 443.0
margin_bottom = 367.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "+12"
align = 1
valign = 1

[node name="PastiRisparmiati" type="Label" parent="Totalizzatore_UI"]
margin_left = 34.0
margin_top = 424.0
margin_right = 428.0
margin_bottom = 561.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Pasti risparmiati"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="ContinuaButton" parent="Totalizzatore_UI" instance=ExtResource( 7 )]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -443.0
margin_top = -101.0
margin_right = -18.0
margin_bottom = -22.0
text = "CONTINUA"

[node name="ScoreZero" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -337.0
margin_top = -142.0
margin_right = 337.0
margin_bottom = 142.0
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="ScoreZero"]
margin_right = 674.0
margin_bottom = 284.0
custom_constants/margin_right = 40
custom_constants/margin_top = 20
custom_constants/margin_left = 40
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="ScoreZero/MarginContainer"]
margin_left = 40.0
margin_top = 20.0
margin_right = 634.0
margin_bottom = 264.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Non avete risparmiato nessun pasto!"
align = 1
valign = 1
autowrap = true

[node name="Tween" type="Tween" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="NumbersTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="SoundAnimator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/sound_up = SubResource( 6 )

[node name="EatingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -50.0

[node name="Ding" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0

[connection signal="button_pressed" from="Totalizzatore_UI/ContinuaButton" to="." method="end_totalizzatore"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
